tests/cases/errors/unclosed_optional.tex
\begin{document}
\usepackage[key={value non chiuso]{geometry}
\end{document}
